@@ -1,3 +1,9 @@
+2011-05-28  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/edge/flip.jl
+	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
+	longer started if a timer is already running; fixes bug where
+	flip-viewport would jump multiple viewports.
+
 2011-05-21  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* debian/changelog
 	* debian/rules
